force-app/main/default/objects/Quote/fields/AcceptedDate__c.field-meta.xml
<CustomField>
    <fullName>AcceptedDate__c</fullName>
    <description>Date, when Quote got Status Accepted.</description>
    <label>Accepted Date</label>
    <type>Date</type>
</CustomField>