force-app/main/default/objects/Quote/fields/Account_balance__c.field-meta.xml
<CustomField>
    <fullName>Account_balance__c</fullName>
    <formula>Account_for_Related_List__r.Account_Balance_2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>