force-app/main/default/objects/Quote/fields/Account_for_Related_List__c.field-meta.xml
<CustomField>
    <fullName>Account_for_Related_List__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>https://jira.orderbird.com/browse/CDS-722</description>
    <label>Account for Related List</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Quotes</relationshipLabel>
    <relationshipName>Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>