force-app/main/default/objects/Quote/fields/AutoAcceptPriority__c.field-meta.xml
<CustomField>
    <fullName>AutoAcceptPriority__c</fullName>
    <label>Auto-Accept Priority</label>
    <precision>16</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>