force-app/main/default/objects/Quote/fields/Contains_Recurring_Items__c.field-meta.xml
<CustomField>
    <fullName>Contains_Recurring_Items__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contains Recurring Items</label>
    <type>Checkbox</type>
</CustomField>