force-app/main/default/objects/Quote/fields/ContractEffectiveDate__c.field-meta.xml
<CustomField>
    <fullName>ContractEffectiveDate__c</fullName>
    <inlineHelpText>Relevant date for Hardware shipment (if payments are confirmed) and date printed on the invoice.</inlineHelpText>
    <label>Contract Effective Date</label>
    <type>Date</type>
</CustomField>