force-app/main/default/objects/Quote/fields/Customer_Friendly_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Friendly_Name__c</fullName>
    <formula>IF(
 CONTAINS(CreatedBy.LastName, &quot;Guest&quot;) , 
 &quot;Custom Offer created on &quot;,
 &quot;Quote created by &quot; &amp; CreatedBy.FirstName &amp; &quot; on &quot;
) &amp;
TEXT(DAY(DATEVALUE(CreatedDate)))+&quot;.&quot; +TEXT(MONTH(DATEVALUE(CreatedDate)))+&quot;.&quot; +TEXT(YEAR(DATEVALUE(CreatedDate)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Friendly Name</label>
    <type>Text</type>
</CustomField>