force-app/main/default/objects/Quote/fields/DisableSubmit__c.field-meta.xml
<CustomField>
    <fullName>DisableSubmit__c</fullName>
    <formula>ISBLANK(Opportunity.Account.ZuoraId__c) 
&amp;&amp; (
  ISBLANK(InvoiceForecast__c)
  ||
  ABS(InvoiceForecast__c - Subtotal - Tax ) &gt; 0.01
)</formula>
    <label>Disable Submit</label>
    <type>Checkbox</type>
</CustomField>