force-app/main/default/objects/Quote/fields/Email_Alert__c.field-meta.xml
<CustomField>
    <fullName>Email_Alert__c</fullName>
    <label>Email Alert</label>
    <length>255</length>
    <type>Text</type>
</CustomField>