force-app/main/default/objects/Quote/fields/Expire_Quote__c.field-meta.xml
<CustomField>
    <fullName>Expire_Quote__c</fullName>
    <formula>AND(
  OR(
    ISPICKVAL(Status, &quot;Draft&quot;),
    ISPICKVAL(Status, &quot;In Review&quot;)
  ),
  Opportunity.IsClosed,
  ExpirationDate &lt; TODAY() - 30
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expire Quote</label>
    <type>Checkbox</type>
</CustomField>