force-app/main/default/objects/Quote/fields/First_Instalment_Rate__c.field-meta.xml
<CustomField>
    <fullName>First_Instalment_Rate__c</fullName>
    <description>https://jira.orderbird.com/browse/CDS-1562
Used for Sendtemplate</description>
    <formula>(TotalPrice +  Tax ) / 2</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>First Instalment Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>