force-app/main/default/objects/Quote/fields/Includes_Starterpackage__c.field-meta.xml
<CustomField>
    <fullName>Includes_Starterpackage__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Includes Starterpackage</label>
    <type>Checkbox</type>
</CustomField>