force-app/main/default/objects/Quote/fields/InvoiceForecast__c.field-meta.xml
<CustomField>
    <fullName>InvoiceForecast__c</fullName>
    <label>Zuora Invoice Forecast</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>