force-app/main/default/objects/Quote/fields/InvoiceOwner__c.field-meta.xml
<CustomField>
    <fullName>InvoiceOwner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Alternate Invoice Owner</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Invoice Owner Quotes</relationshipLabel>
    <relationshipName>InvoiceOwnerQuotes</relationshipName>
    <type>Lookup</type>
</CustomField>