force-app/main/default/objects/Quote/fields/InvoiceTargetDate__c.field-meta.xml
<CustomField>
    <fullName>InvoiceTargetDate__c</fullName>
    <label>Invoice Target Date</label>
    <type>Date</type>
</CustomField>