force-app/main/default/objects/Quote/fields/Is_Missing_Documents__c.field-meta.xml
<CustomField>
    <fullName>Is_Missing_Documents__c</fullName>
    <formula>Opportunity.Account.BillingCountryCode__c = &quot;DE&quot; &amp;&amp;
Opportunity.NewBusiness__c &amp;&amp;

(
ISBLANK( Opportunity.Account.Registration_certificate_chk__c )

||

(Pay_by_Instalment__c &amp;&amp; (
ISBLANK( Opportunity.Account.Instalment_Contract_chk__c ) ||
ISBLANK( Opportunity.Account.Credit_Check_chk__c ) ||
ISBLANK( Opportunity.Account.Id_Card_chk__c ) 
))

||

( (  (NOT(WireFirstPayment__c) &amp;&amp; TEXT(PaymentMethod__c) = &quot;Bank Transfer&quot;) || Contains_Recurring_Items__c) &amp;&amp; ISBLANK(  Opportunity.Account.SEPA_Mandate_chk__c  ))

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Missing Documents</label>
    <type>Checkbox</type>
</CustomField>