force-app/main/default/objects/Quote/fields/IsAccepted__c.field-meta.xml
<CustomField>
    <fullName>IsAccepted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Accepted</label>
    <type>Checkbox</type>
</CustomField>