force-app/main/default/objects/Quote/fields/IsCancellation__c.field-meta.xml
<CustomField>
    <fullName>IsCancellation__c</fullName>
    <formula>LineItemCount &lt;&gt; 0 &amp;&amp; LineItemCount =  NegativeLineItems__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsCancellation</label>
    <type>Checkbox</type>
</CustomField>