force-app/main/default/objects/Quote/fields/LegacyQuoteRecordType__c.field-meta.xml
<CustomField>
    <fullName>LegacyQuoteRecordType__c</fullName>
    <label>Legacy Quote RecordType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>