force-app/main/default/objects/Quote/fields/NegativeLineItems__c.field-meta.xml
<CustomField>
    <fullName>NegativeLineItems__c</fullName>
    <label>Negative Line Items</label>
    <summaryFilterItems>
        <field>QuoteLineItem.Quantity</field>
        <operation>lessThan</operation>
        <value>0</value>
    </summaryFilterItems>
    <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>