force-app/main/default/objects/Quote/fields/NetSuiteId__c.field-meta.xml
<CustomField>
    <fullName>NetSuiteId__c</fullName>
    <description>This field contains the internal ID of the record exported from NetSuite.</description>
    <externalId>true</externalId>
    <inlineHelpText>This field contains the internal ID of the record exported from NetSuite. DO NOT TOUCH</inlineHelpText>
    <label>NetSuiteId</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>