force-app/main/default/objects/Quote/fields/Pay_by_Instalment__c.field-meta.xml
<CustomField>
    <fullName>Pay_by_Instalment__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Does the customer request to pay by three monthly instalments? This automatically adds the instalment fee to the quote. Only available with Bank transfer</inlineHelpText>
    <label>Pay by Instalment</label>
    <type>Checkbox</type>
</CustomField>