force-app/main/default/objects/Quote/fields/Payment_Method_Status__c.field-meta.xml
<CustomField>
    <fullName>Payment_Method_Status__c</fullName>
    <formula>Account_for_Related_List__r.Payment_Method_Status__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment Method Status</label>
    <type>Text</type>
</CustomField>