force-app/main/default/objects/Quote/fields/PaymentMethod__c.field-meta.xml
<CustomField>
    <fullName>PaymentMethod__c</fullName>
    <inlineHelpText>How is the customer going to pay recurring fees? Bank transfer (orderbird charges, SEPA Mandate / Direct Debit) or Wire transfer (customer wires money)?</inlineHelpText>
    <label>Payment Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bank Transfer</fullName>
                <default>true</default>
                <label>Bank Transfer</label>
            </value>
            <value>
                <fullName>Wire Transfer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>