force-app/main/default/objects/Quote/fields/PayPalLink__c.field-meta.xml
<CustomField>
    <fullName>PayPalLink__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PayPal Link</label>
    <type>Checkbox</type>
</CustomField>