force-app/main/default/objects/Quote/fields/PDF_PaymentMethod__c.field-meta.xml
<CustomField>
    <fullName>PDF_PaymentMethod__c</fullName>
    <description>Shows the Payment Method for the related Account, considering the current Billing Process.
This value is rendered in the pdf of the quote.</description>
    <formula>Account_for_Related_List__r.Batch_Payment_Method__c</formula>
    <label>PDF Payment Method</label>
    <type>Text</type>
</CustomField>