force-app/main/default/objects/Quote/fields/POS_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>POS_Start_Date__c</fullName>
    <defaultValue>today()</defaultValue>
    <inlineHelpText>Date that indicates the date when the customer intents to start working with orderbird POS or WiFi (formerly POS Start Date). Cannot be before Contract Effective Date.</inlineHelpText>
    <label>Service Activation Date</label>
    <type>Date</type>
</CustomField>