force-app/main/default/objects/Quote/fields/Proration_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Proration_Start_Date__c</fullName>
    <label>Proration Start Date</label>
    <type>Date</type>
</CustomField>