force-app/main/default/objects/Quote/fields/QuoteEmailed__c.field-meta.xml
<CustomField>
    <fullName>QuoteEmailed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Quote Emailed</label>
    <type>Checkbox</type>
</CustomField>