force-app/main/default/objects/Quote/fields/SpecialOffer__c.field-meta.xml
<CustomField>
    <fullName>SpecialOffer__c</fullName>
    <label>Special Offer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GuestMgmt 199EUR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>