force-app/main/default/objects/Quote/fields/SpecialRestart__c.field-meta.xml
<CustomField>
    <fullName>SpecialRestart__c</fullName>
    <label>Special Restart</label>
    <summaryFilterItems>
        <field>QuoteLineItem.RestartDiscount__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>