force-app/main/default/objects/Quote/fields/Template_Branding__c.field-meta.xml
<CustomField>
    <fullName>Template_Branding__c</fullName>
    <description>https://jira.orderbird.com/browse/CDS-3198</description>
    <formula>Opportunity.Template_Branding__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Template Branding</label>
    <type>Text</type>
</CustomField>