force-app/main/default/objects/Quote/fields/WireFirstPayment__c.field-meta.xml
<CustomField>
    <fullName>WireFirstPayment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Wire First Payment</label>
    <type>Checkbox</type>
</CustomField>