force-app/main/default/objects/Quote/recordTypes/Review.recordType-meta.xml
<RecordType>
    <fullName>Review</fullName>
    <active>true</active>
    <label>Review</label>
</RecordType>