force-app/main/default/objects/Quote/validationRules/AcceptanceStatusWrong.validationRule-meta.xml
<ValidationRule>
    <fullName>AcceptanceStatusWrong</fullName>
    <active>true</active>
    <errorConditionFormula>IsAccepted__c = false &amp;&amp; ISPICKVAL(Status,&apos;Accepted&apos;) &amp;&amp; NOT(CONTAINS( $Label.Admin_Users , $User.Id ))</errorConditionFormula>
    <errorMessage>You cannot manually change the Quote status to Accepted. You must accept the quote by clicking the &quot;Accept Quote&quot; button when the Quote is In Review.</errorMessage>
</ValidationRule>